Fix background color opacity in glassy section for improved visibility

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -80,7 +80,7 @@ h1 {
 }
 
 section.glassy {
-    background-color: light-dark(rgb(0 0 0 / 0.2), rgb(255 255 255 / 0.1));
+    background-color: light-dark(rgb(0 0 0 / 20%), rgb(255 255 255 / 10%));
     border-radius: var(--border-radius-large);
     display: flex;
     flex-direction: column;
